uradila podnosenje zahteva, bez validacija sema

--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-form/zahtev-form.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-form/zahtev-form.component.html
@@ -109,7 +109,7 @@
                 <input 
                 matInput 
                 autocomplete="off"
-                formControlName="broj"
+                formControlName="kontakt"
                 placeholder="Unesite ostale kontakt podatke">
                 <mat-error>
                     Morate uneti kontakt podatke!
