--- a/frontend-organ-vlasti/src/styles.sass
+++ b/frontend-organ-vlasti/src/styles.sass
@@ -1,5 +1,6 @@
 @import "./styles/main"
 @import "./styles/scroll"
 @import "./styles/form-field"
+@import "./styles/snackbar"
 
 @import '~bootstrap/scss/bootstrap'
