--- a/frontend-organ-vlasti/src/styles.sass
+++ b/frontend-organ-vlasti/src/styles.sass
@@ -2,5 +2,7 @@
 @import "./styles/scroll"
 @import "./styles/form-field"
 @import "./styles/snackbar"
+@import "./styles/controls"
+@import "./styles/disabled"
 
 @import '~bootstrap/scss/bootstrap'
