--- a/frontend-organ-vlasti/src/styles/main.sass
+++ b/frontend-organ-vlasti/src/styles/main.sass
@@ -9,6 +9,5 @@ body
     font-family: Roboto, "Helvetica Neue", sans-serif
     background-color: $background-primary !important
 
-button:focus
-    border: $zero !important
-    outline: $zero !important
+h2
+    text-align: center
