--- a/frontend-poverenik/src/styles.sass
+++ b/frontend-poverenik/src/styles.sass
@@ -2,8 +2,7 @@
 @import "./styles/scroll"
 @import "./styles/form-field"
 @import "./styles/snackbar"
+@import "./styles/controls"
+@import "./styles/disabled"
 
-@import '~bootstrap/scss/bootstrap'
-
-/* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap'
