zamenilla lokaclne jar fajlove pom.xml dependency-ima i dodala slanje xhtml fajla zahteva na frontend

--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-details/zahtev-details.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-details/zahtev-details.component.html
@@ -1,1 +1,5 @@
-<p>zahtev-details works!</p>
+<button (click)="click()">KLIKNI</button>
+
+<app-form-container>
+    <div [innerHTML]="zahtevVieW | safeHtml"></div>
+</app-form-container>
