--- a/frontend-organ-vlasti/src/styles/main.sass
+++ b/frontend-organ-vlasti/src/styles/main.sass
@@ -9,5 +9,5 @@ body
     font-family: Roboto, "Helvetica Neue", sans-serif
     background-color: $background-primary !important
 
-h2
+h2, h3
     text-align: center
