dodala xonomy i ostale xsl transformacije

--- a/frontend-poverenik/src/app/components/zalba/zalba-details/zalba-details.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-details/zalba-details.component.html
@@ -1,1 +1,5 @@
-<p>zalba-details works!</p>
+<button (click)="click()">KLIKNI</button>
+
+<app-form-container>
+    <div [innerHTML]="zalbaView | safeHtml"></div>
+</app-form-container>
