--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-form/zahtev-form.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-form/zahtev-form.component.html
@@ -1,13 +1,52 @@
 <app-form-container>
-    <h3>Zahtev za pristup informacijama od javnog značaja</h3><br><br>
-    <form>
-        <div id="editor">
+    <h3>Zahtev za pristup informacijama od javnog značaja</h3>
+    <br><br><br>
+    <form [formGroup]="zahtevForm">
 
-
-                
+        <div [class.disabled]="zahtevPending">
+            <mat-form-field>
+                <mat-label>Pravo koje želite da ostvarite: </mat-label>
+                <mat-select formControlName="tipZahteva">
+                    <mat-option [value]="'obavestenje'">
+                        obaveštenje da li organ poseduje traženu informaciju
+                    </mat-option>
+                    <mat-option [value]="'uvid'">
+                        uvid u dokument koji sadrži traženu informaciju
+                    </mat-option>
+                    <mat-option [value]="'kopija'">
+                        kopija dokumenta koji sadrži traženu informaciju
+                    </mat-option>
+                    <mat-option [value]="'dostava'">
+                        dostava dokumenta koji sadrži traženu informaciju
+                    </mat-option>
+                </mat-select>                
+            </mat-form-field>
+            <mat-form-field *ngIf="dostava">
+                <mat-label>Način dostave</mat-label>
+                <mat-select formControlName="tipDostave">
+                    <mat-option [value]="'posta'">poštom</mat-option>
+                    <mat-option [value]="'email'">elektronskom poštom</mat-option>
+                    <mat-option [value]="'faks'">faksom</mat-option>
+                    <mat-option [value]="'ostalo'">na drugi način</mat-option>
+                </mat-select>                
+            </mat-form-field>
+            <mat-form-field *ngIf="ostalaDostava">
+                <mat-label>Opis dostave</mat-label>
+                <input 
+                matInput 
+                autocomplete="off"
+                formControlName="opisDostave"
+                placeholder="Unesite opis dostave">
+                <mat-error>
+                    Opis dostave je obavezan!
+                </mat-error>    
+            </mat-form-field>
         </div>
-
         <br><br>
+
+        <div id="detaljiEditor"></div>
+        <br><br>
+
         <app-center-container>
             <button 
             *ngIf="!zahtevPending"
