uradila bekend deo pregleda zahteva (dodala pretragu prema xpathu)

--- a/frontend-organ-vlasti/src/app/components/main/register-form/register-form.component.html
+++ b/frontend-organ-vlasti/src/app/components/main/register-form/register-form.component.html
@@ -8,7 +8,7 @@
                 <input 
                 matInput 
                 autocomplete="off"
-                formControlName="email" 
+                formControlName="mejl" 
                 placeholder="Unesite email">
                 <mat-error>
                     Email je obavezan!
