--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-form/zahtev-form.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-form/zahtev-form.component.html
@@ -1,6 +1,7 @@
 <app-form-container>
+    <button (click)="test()">TEST</button>
     <h3>Zahtev za pristup informacijama od javnog značaja</h3>
-    <br><br><br>
+    <br><br>
     <form [formGroup]="zahtevForm">
 
         <div [class.disabled]="zahtevPending">
@@ -41,10 +42,9 @@
                     Opis dostave je obavezan!
                 </mat-error>    
             </mat-form-field>
-        </div>
-        <br><br>
+            <div id="detaljiEditor"></div>
 
-        <div id="detaljiEditor"></div>
+        </div>
         <br><br>
 
         <app-center-container>
