uradila preuzimanje pdfa zahteva

--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-details/zahtev-details.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-details/zahtev-details.component.html
@@ -12,7 +12,9 @@
                 link na html
             </span>
             <span>
-                link na pdf
+                
+                <!--<button (click)="prezumiPdf(zahtev.broj)">PREUZMIE PDF</button>-->
+                <button (click)="openPdf(zahtev.broj)">uzmi pdf</button>
             </span>
             <span *ngIf="uloga === 'sluzbenik' && zahtev.status === 'cekanje'">
                 dodaj obavestenje
