uradila preuzimanje htmla zahteva

--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-details/zahtev-details.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-details/zahtev-details.component.html
@@ -9,7 +9,7 @@
                 {{zahtev.tipZahteva}}
             </span>
             <span>
-                link na html
+                <button (click)="openHtml(zahtev.broj)">uzmi html</button>
             </span>
             <span>
                 
