--- a/frontend-poverenik/src/app/components/zalba/zalba-details/zalba-details.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-details/zalba-details.component.html
@@ -1,1 +1,24 @@
-<p>zalba-details works!</p>
+<div class="mat-elevation-z8">
+    <mat-card>
+        <mat-card-content>
+            <span>
+                {{zalba.tipZalbe}}
+            </span>  
+            <span>
+                {{zalba.organVlasti}}
+            </span>
+            <span>
+                {{zalba.datum}}
+            </span>
+            <span>
+                <button (click)="openHtml()">uzmi html</button>
+            </span>
+            <span>                
+                <button (click)="openPdf()">uzmi pdf</button>
+            </span>
+            <span *ngIf="uloga === 'poverenik' && zalba.status === 'cekanje'">
+                <button (click)="dodajResenje()">dodaj resenje</button>
+            </span>
+        </mat-card-content>
+    </mat-card>
+</div>
