sredila frontend poverenika i zavrsila resenje

--- a/frontend-poverenik/src/app/components/main/login-form/login-form.component.html
+++ b/frontend-poverenik/src/app/components/main/login-form/login-form.component.html
@@ -33,7 +33,7 @@
             *ngIf="!loginPending"
             mat-raised-button 
             color="primary"
-            (click)="login()">Login</button>
+            (click)="login()">Prijavi se</button>
             <app-spinner-button *ngIf="loginPending"></app-spinner-button>
         </app-center-container>
     </form>
