--- a/frontend-poverenik/src/app/components/main/register-form/register-form.component.html
+++ b/frontend-poverenik/src/app/components/main/register-form/register-form.component.html
@@ -89,7 +89,7 @@
             *ngIf="!registerPending"
             mat-raised-button 
             color="primary"
-            (click)="register()">Register</button>
+            (click)="register()">Registruj se</button>
             <app-spinner-button *ngIf="registerPending"></app-spinner-button>
         </app-center-container>
     </form>
