--- a/frontend-poverenik/src/app/components/zalba/zalba-cutanje-form/zalba-cutanje-form.component.html
+++ b/frontend-poverenik/src/app/components/zalba/zalba-cutanje-form/zalba-cutanje-form.component.html
@@ -27,7 +27,8 @@
                 <mat-error>
                     Datum podnošenja zahteva je obavezan!
                 </mat-error>    
-            </mat-form-field>            <mat-form-field>
+            </mat-form-field>            
+            <mat-form-field>
                 <mat-label>Tip ćutanja: </mat-label>
                 <mat-select formControlName="tipCutanja">
                     <mat-option [value]="'nije postupio'">
