--- a/frontend-poverenik/src/app/components/main/toolbar/toolbar.component.html
+++ b/frontend-poverenik/src/app/components/main/toolbar/toolbar.component.html
@@ -1,6 +1,45 @@
 <mat-toolbar color="primary" class="mat-elevation-z24">
     <span>
+        <button 
+        *ngIf="uloga==='gradjanin'"
+        mat-icon-button
+        [routerLink]="'/zalba-cutanje-form'">
+            <mat-icon matTooltip="Žalba na ćutanje organa vlasti">add</mat-icon>
+        </button>
+        <button 
+        *ngIf="uloga==='gradjanin'"
+        mat-icon-button
+        [routerLink]="'/zalba-odluka-form'">
+            <mat-icon matTooltip="Žalba na odluku organa vlasti">add</mat-icon>
+        </button>
+        <button 
+        *ngIf="uloga"
+        mat-icon-button
+        [routerLink]="'/zalba-list'">
+            <mat-icon matTooltip="Lista podnetih žalbi">list</mat-icon>
+        </button>
+        <button 
+        *ngIf="uloga"
+        mat-icon-button
+        [routerLink]="'/resenje-list'">
+            <mat-icon matTooltip="Lista izdatih rešenja">list</mat-icon>
+        </button>
     </span>
     <span>
+        <button 
+        *ngIf="!uloga"
+        mat-button [routerLink]="login ? './register' : './login'">
+            <mat-icon>{{login ? 'person_add' : 'login'}}</mat-icon>
+            {{login ? 'Registracija' : 'Prijava'}}
+        </button>   
+        <button *ngIf="uloga" mat-icon-button [matMenuTriggerFor]="more">
+            <mat-icon matTooltip="više">more_vert</mat-icon>
+        </button>
+        <mat-menu #more="matMenu">
+            <button mat-menu-item (click)="odjava()">
+                <mat-icon>logout</mat-icon>
+                <span>Odjava</span>
+            </button>
+        </mat-menu>
     </span>
 </mat-toolbar>
