--- a/frontend-organ-vlasti/src/app/components/obavestenje/obavestenje-details/obavestenje-details.component.html
+++ b/frontend-organ-vlasti/src/app/components/obavestenje/obavestenje-details/obavestenje-details.component.html
@@ -8,10 +8,10 @@
                 {{obavestenje.datumZahteva}}
             </span>
             <span>
-                <button (click)="openHtml()">uzmi html</button>
+                <a [routerLink]="'/obavestenje-list'" (click)="getHtml()">preuzmi html</a>
             </span>
             <span>                
-                <button (click)="openPdf()">uzmi pdf</button>
+                <a [routerLink]="'/obavestenje-list'" (click)="getPdf()">preuzmi pdf</a>
             </span>
         </mat-card-content>
     </mat-card>
