--- a/frontend-organ-vlasti/src/app/components/obavestenje/obavestenje-list/obavestenje-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/obavestenje/obavestenje-list/obavestenje-list.component.html
@@ -1,5 +1,10 @@
+<app-preloader *ngIf="fetchPending">
+</app-preloader>
+
+<app-empty-container *ngIf="!obavestenja?.length"
+[title]="'NEMA OBAVEŠTENJA'"></app-empty-container>
+
 <app-obavestenje-details 
 *ngFor="let obavestenje of obavestenja"
 [obavestenje]="obavestenje">
-
 </app-obavestenje-details>
