--- a/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/zahtev/zahtev-list/zahtev-list.component.html
@@ -1,5 +1,11 @@
+<app-preloader *ngIf="fetchPending">
+</app-preloader>
+
+<app-empty-container *ngIf="!zahtevi?.length"
+[title]="'NEMA ZAHTEVA'">
+</app-empty-container>
+
 <app-zahtev-details 
 *ngFor="let zahtev of zahtevi"
 [zahtev]="zahtev">
-
 </app-zahtev-details>
